--- a/src/components/components.css
+++ b/src/components/components.css
@@ -105,9 +105,94 @@
   align-items: center;
 }
 
-.filter{
+.filter {
   width: 94%;
   margin: auto;
   margin-top: 20px;
   justify-content: space-between;
+}
+
+.searchBikes {
+  width: 94%;
+  margin: auto;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+}
+td,
+th {
+  padding: 10px 0px;
+  border: 1px solid black;
+}
+tbody > tr:hover {
+  background-color: aliceblue;
+}
+thead > tr {
+  background-color: lightcyan;
+}
+.review-reservation-container {
+  width: 100%;
+  display: grid;
+  text-align: center;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  background-color: aliceblue;
+  margin: 20px 0px;
+}
+.review-reservation-container > div {
+  padding: 10px 0px;
+}
+
+.add-review-box {
+  width: 300px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  border-radius: 6px;
+  margin: 10px;
+}
+
+.reviews-container{
+  width: 95%;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: repeat(4,23.8%);
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.reviews-container > div{
+  background-color: aliceblue;
+  border: 1px solid black;
+  padding: 10px 20px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.reviews-container > div > div{
+  display: flex;
+  justify-content: space-between;
+}
+
+.bikeDetails{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 5%;
+  margin: 20px auto;
+  background-color: aliceblue;
+}
+
+.bikeDetails + div{
+  font-size: 24px;
+  width: 95%;
+  margin: 0px auto;
+  font-weight: bold;
 }
